fixed problem with hero image not showing up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
     width: 100%;
     margin-bottom: 25px;
     margin-top: 25px;
-    background-image: url("/assets/images/florian-olivo-4hbJ-eymZ1o-unsplash.jpg");
+    background-image: url("../images/florian-olivo-4hbJ-eymZ1o-unsplash.jpg");
     background-size: cover;
     background-position: center;
     align-items: flex-start;
